...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_bg">

        <!--RecyclerView for options selection-->
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/settingOptionsView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                tools:listitem="@layout/setting_option_item"
                app:layout_constraintHorizontal_weight="5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btnLeft"
                app:layout_constraintEnd_toStartOf="@+id/guidelineBegin"
                android:visibility="gone"
                tools:visibility="visible"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBegin"
...
                android:paddingEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintHorizontal_weight="13"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btnRight"
                app:layout_constraintStart_toEndOf="@+id/guidelineBegin"
                android:visibility="gone"
                tools:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
...
                        app:layout_constraintBottom_toBottomOf="@+id/faceVerifyTimeEditText"
                        style="@style/setting_text_label_style"/>

                <TextView
                        android:id="@+id/appModeLabel"
                        android:text="@string/application_mode"
                        app:layout_constraintTop_toTopOf="@+id/appModeSpinner"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineInner2"
                        app:layout_constraintBottom_toBottomOf="@+id/appModeSpinner"
                        style="@style/setting_text_label_style"/>

                <TextView
                        android:id="@+id/checkInOutLabel"
...
                    app:layout_constraintGuide_percent="0.28"
                    android:orientation="vertical"/>

            <TextView
                    android:text="@string/account"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="@+id/settingAccountEditText"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineAccount"
                    app:layout_constraintBottom_toBottomOf="@+id/settingAccountEditText"
                    style="@style/setting_text_label_style"/>

            <TextView
                    android:text="@string/password"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="@+id/settingPasswordEditText"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineAccount"
                    app:layout_constraintBottom_toBottomOf="@+id/settingPasswordEditText"
                    style="@style/setting_text_label_style"/>

            <EditText
                    android:id="@+id/settingAccountEditText"
...
