...
        <RelativeLayout
                android:id="@+id/commonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/splitLine">
            <TextView
                    android:id="@+id/timeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    tools:text="17:55"
                    android:textSize="@dimen/toolbar_title_text_size"
...
